# coding-notes

./: .gitignore  .gitmodules  LICENSE  README.md  Template.md
C++/: 01 - Intro to C++.md  01 C++ - Introduction.md  02 - Functions and File IO.md  02 C++ - Functions and File IO.md  03 - Advanced C++ (Pointers).md  03 C++ - Object-Oriented Syntax.md  03 C++ - Pointers.md  04 - Advanced C++ (OOP).md  04 C++ - Object-Oriented Syntax.md  04 C++ - Pointers and Memory.md  04 C++ - Pointers.md  05 - Tips and Tricks.md  05 C++ - Data Structures (Containers).md  05 C++ - Tips and Tricks.md  06 C++ - Templates.md  07 C++ - Threading and Concurrency.md  08 C++ - Linkages and Preprocessor Directives.md  (+1 more)
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_boilerplate/: .gitignore  .travis.yml  CMakeLists.txt  README.md  compile  gencode
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_boilerplate/cmake/: FindOpenSplice.cmake
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_boilerplate/idl/: Boilerplate.idl
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_boilerplate/lib/boilerplate/template/: Boilerplate.cpp  Boilerplate.h  CMakeLists.txt  CheckStatus.h  Participant.cpp  Participant.h
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_boilerplate/src/: pubsub_1.cpp  pubsub_2.cpp
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_minimal/: .travis.yml  CMakeLists.txt  README.md  gencode
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_minimal/cmake/: MacroOpenSplice.cmake  osmacros.cmake
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_minimal/idl/: HelloWorld.idl
DDS/OpenSplice DDS (C++ API)/Starter Code and Resources/opensplice_minimal/src/: .pub.cpp.swp  CheckStatus.cpp  DDSEntityManager.cpp  DDSEntityManager.h  pub.cpp  sub.cpp
ROS/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/basic_pub_sub/: package.xml
ROS/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/basic_pub_sub/src/: basic_pub  basic_sub
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/basic_pub_sub/: CMakeLists.txt
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/basic_pub_sub/src/: .basic_pub.cpp.swp
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/modular_pub_sub/: package.xml
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/modular_pub_sub/include/PACKAGE_HEADERS/: nodeClassInterface.hpp
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/modular_pub_sub/src/: Node.cpp
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/msg_example/: CMakeLists.txt
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/msg_example/src/: msg_example.cpp
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/param_example/: CMakeLists.txt  package.xml
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/param_example/src/: param_example.cpp
Robot Operating System (ROS 1.0)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/msg_example_msgs/: CMakeLists.txt  package.xml
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/simple_action_example/: CMakeLists.txt  package.xml
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/simple_action_example/action/: .Fibonacci.action.swp
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/simple_action_example/src/: fibonacci_client.cpp  fibonacci_server.cpp
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/srv_example/: CMakeLists.txt
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/srv_example/src/: srv_example_client.cpp  srv_example_server.cpp
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/roscpp_minimal_packages/srv_example/srv/: AddTwoInts.srv
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/basic_pub_sub/: CMakeLists.txt
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/basic_pub_sub/src/: hello_world
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/msg_example/: CMakeLists.txt  package.xml
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/msg_example/src/: msg_example
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/param_example/: CMakeLists.txt  package.xml  setup.py
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/param_example/src/: param_example
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/simple_action_example/: CMakeLists.txt  package.xml  setup.py
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/simple_action_example/src/: fibonacci_client  fibonacci_server
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/srv_example/: CMakeLists.txt  package.xml
Robot Operating System (ROS)/ROS/Starter Code and Resources/ROS_Minimal_Projects/rospy_minimal_packages/srv_example/src/: srv_example_client  srv_example_server
(+81 files in other folders)
