<?xml version="1.0"?>
<package format="2">
  <name>simple_action_example</name>
  <version>0.0.0</version>
  <description>An example basic roscpp package that implements ROS actions! Main source is http://wiki.ros.org/actionlib_tutorials/Tutorials</description>

  <author email="methyldragon@gmail.com">methylDragon</author>
  <maintainer email="methyldragon@gmail.com">methylDragon</maintainer>
  <url type="website">http://github.com/methylDragon</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

</package>
